--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 /settings.json
 .DS_STORE
 *.pyc
+.idea/*
+*.swp
+*.lock
+*.log
+*.pid
+htmlcov
+build
+dist
+/*.egg-info/
+/*.egg/
+.idea
+.tox
+*.egg
