--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,26 @@
-/settings.json
-.DS_STORE
-*.pyc
-aldryn_django_cms.egg-info
-build
-dist
+*.py[cod]
+*$py.class
+*.egg-info
+*.log
+*.pot
+.DS_Store
+.coverage/
+.eggs/
+.idea/
+.project/
+.pydevproject/
+.settings/
+.tox/
+__pycache__/
+build/
+dist/
+env/
+
+/~
+/node_modules
+.sass-cache
+*.css.map
+npm-debug.log
+package-lock.json
+
+local.sqlite
