--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
       env: TOX_ENV='flake8'
     - python: 3.4
       env: TOX_ENV='isort'
-      # Django 1.11
+      # django CMS 3.4
     - python: 2.7
       env: DJANGO='dj111' CMS='cms34'
     - python: 3.4
