--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist =
     flake8
     isort
-    py{34,35,36}-dj{20,21}-cms36
+    py{34,35,36}-dj{111,20,21}-cms36
 
 skip_missing_interpreters=True
 
@@ -38,6 +38,7 @@ known_django = django
 [testenv]
 deps =
     -r{toxinidir}/tests/requirements.txt
+    dj111: Django>=1.11,<2
     dj20: Django>=2.0,<2.1
     dj21: Django>=2.1,<2.2
     cms36: django-cms>=3.6,<3.7
