--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 envlist =
     flake8
     isort
-    py{34,35,36}-dj{111,20,21}-cms36
+    py{27,35,36}-dj111-cms37
+    py{35,36,37}-dj{21,22}-cms37
 
 skip_missing_interpreters=True
 
@@ -38,10 +39,10 @@ known_django = django
 [testenv]
 deps =
     -r{toxinidir}/tests/requirements.txt
-    dj111: Django>=1.11,<2
-    dj20: Django>=2.0,<2.1
+    dj111: Django>=1.11,<2.0
     dj21: Django>=2.1,<2.2
-    cms36: django-cms>=3.6,<3.7
+    dj22: Django>=2.2rc1,<2.3
+    cms37: https://github.com/divio/django-cms/archive/release/3.7.x.zip
 commands =
     {envpython} --version
     {env:COMMAND:coverage} erase
