--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
 
+dist: xenial
 sudo: false
 
 matrix:
@@ -15,10 +16,14 @@ matrix:
       env: DJANGO='dj21' CMS='cms37'
     - python: 3.6
       env: DJANGO='dj22' CMS='cms37'
+    - python: 3.7
+      env: DJANGO='dj22' CMS='cms37'
 
 install:
   - pip install coverage isort tox
   - "if [[ $TRAVIS_PYTHON_VERSION == '3.5' ]]; then export PY_VER=py35; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '3.6' ]]; then export PY_VER=py36; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '3.7' ]]; then export PY_VER=py37; fi"
   - "if [[ ${DJANGO}z != 'z' ]]; then export TOX_ENV=$PY_VER-$DJANGO-$CMS; fi"
 
 script:
