--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,7 @@
 envlist =
     flake8
     isort
-    py{27,35,36}-dj111-cms37
-    py{35,36,37}-dj{21,22}-cms37
+    py{35,36,37}-dj{111,21,22}-cms37
 
 skip_missing_interpreters=True
 
@@ -41,7 +40,7 @@ deps =
     -r{toxinidir}/tests/requirements.txt
     dj111: Django>=1.11,<2.0
     dj21: Django>=2.1,<2.2
-    dj22: Django>=2.2rc1,<2.3
+    dj22: Django>=2.2,<3.0
     cms37: https://github.com/divio/django-cms/archive/release/3.7.x.zip
 commands =
     {envpython} --version
