--- a/tox.ini
+++ b/tox.ini
@@ -40,8 +40,8 @@ deps =
     -r{toxinidir}/tests/requirements.txt
     dj111: Django>=1.11,<2
     dj21: Django>=2.1,<2.2
-    dj22: Django>=2.2,<3
-    cms37: https://github.com/divio/django-cms/archive/release/3.7.x.zip
+    dj22: Django>=2.2,<2.3
+    cms37: django-cms>=3.7,<3.8
 commands =
     {envpython} --version
     {env:COMMAND:coverage} erase
