--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,7 @@ deps =
     dj111: Django>=1.11,<2
     dj21: Django>=2.1,<2.2
     dj22: Django>=2.2,<3
-    cms37: https://github.com/divio/django-cms/archive/release/3.7.x.zip
+    cms37: django-cms>=3.7,<3.8
 commands =
     {envpython} --version
     {env:COMMAND:coverage} erase
