--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 
 dist: xenial
-sudo: false
 
 matrix:
   include:
@@ -9,17 +8,31 @@ matrix:
       env: TOX_ENV='flake8'
     - python: 3.5
       env: TOX_ENV='isort'
-      # django CMS 3.7
+    # Django 2.2
+    - python: 3.5
+      env: DJANGO='dj22' CMS='cms37'
     - python: 3.6
       env: DJANGO='dj22' CMS='cms37'
     - python: 3.7
       env: DJANGO='dj22' CMS='cms37'
+    - python: 3.8
+      env: DJANGO='dj22' CMS='cms37'
+    # Django 3.0, always run the lowest supported version
+    - python: 3.6
+      env: DJANGO='dj30' CMS='cms37'
+    # Django 3.1, always run the lowest supported version
+    - python: 3.6
+      env: DJANGO='dj31' CMS='cms37'
+  allow_failures:
+    - python: 3.6
+      env: DJANGO='dj31' CMS='cms37'
 
 install:
   - pip install coverage isort tox
   - "if [[ $TRAVIS_PYTHON_VERSION == '3.5' ]]; then export PY_VER=py35; fi"
   - "if [[ $TRAVIS_PYTHON_VERSION == '3.6' ]]; then export PY_VER=py36; fi"
   - "if [[ $TRAVIS_PYTHON_VERSION == '3.7' ]]; then export PY_VER=py37; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '3.8' ]]; then export PY_VER=py37; fi"
   - "if [[ ${DJANGO}z != 'z' ]]; then export TOX_ENV=$PY_VER-$DJANGO-$CMS; fi"
 
 script:
