add initial support

--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,6 +1,9 @@
-# requirements from setup.py
-django-filer>=1.2.4
 # other requirements
 django-app-helper
-tox
 coverage
+isort
+flake8
+# needed for the build to work
+uwsgi
+# requirements from setup.py
+django-filer>=1.2.4
