--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -52,6 +52,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install packaging
           pip install -r tests/requirements.txt
           python setup.py install
       - name: Run coverage
